--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -61,7 +61,7 @@
   					</div>
   				</div>
 				<% }) %>
-				<% if (list.length == 0) {%>
+				<% if (list.length == 0 && page == 1) {%>
 				<div class="col-md-12 no-note">
 					<h4>&nbsp;&nbsp;您还没有任何笔记，现在开始<a href="/post">创建</a>吧!</h4>
 				</div>
